fix(attachments): set css `<pre>` code block white-space wrapping for markdown
white-space must be set to `pre-wrap` for text inside codeblocks to wrap

--- a/app/styles/areas/_details.scss
+++ b/app/styles/areas/_details.scss
@@ -590,7 +590,7 @@
                 color: var(--md-code-block-text-color);
                 padding: 10px;
                 padding-left: 15px;
-                white-space: pre;
+                white-space: pre-wrap;
                 display: block;
                 grid-template-columns: min-content auto;
                 grid-template-rows: auto;
